
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.openxdata</groupId>
    <artifactId>oxd</artifactId>
    <packaging>pom</packaging>
    <version>0.1-BETA-SNAPSHOT</version>
    <name>OpenXdata</name>
    <url>http://openxdata.org</url>

    <description>
        OpenXdata is an open source (under the Apache license, version 2)
        end-to-end solution for collecting data.
    </description>

    <organization>
        <name>OpenXdata Foundation</name>
        <url>http://www.openxdata.org</url>
    </organization>

    <issueManagement>
        <system>trac</system>
        <url>http://trac.openxdata.org</url>
    </issueManagement>

    <ciManagement>
        <system>jenkins</system>
        <url>http://jenkins.openxdata.org</url>
    </ciManagement>

    <mailingLists>
        <mailingList>
            <name>OpenXdata Users List</name>
            <archive>http://groups.google.com/group/openxdata-users</archive>
            <post>openxdata-users@googlegroups.com</post>
        </mailingList>
        <mailingList>
            <name>OpenXdata Dev List</name>
            <archive>http://groups.google.com/group/openxdata-dev</archive>
            <post>openxdata-dev@googlegroups.com</post>
        </mailingList>
    </mailingLists>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>dagmar@cell-life.org</id>
            <name>Dagmar Timler</name>
            <email>dagmar@cell-life.org</email>
            <organization>Cell Life, Cape Town, South Africa</organization>
            <organizationUrl>http://celllife.org</organizationUrl>
            <roles>
               <role>developer</role>
            </roles>
            <timezone>+2</timezone>
        </developer>
        <developer>
            <id>jonny.heggheim@cih.uib.no</id>
            <name>Jonny Heggheim</name>
            <email>jonny.heggheim@cih.uib.no</email>
            <organization>Centre for International Health, University of Bergen</organization>
            <organizationUrl>http://www.uib.no/cih/en</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
        <developer>
            <id>cattabanks@gmail.com</id>
            <name>Mark Gerard</name>
            <email>cattabanks@gmail.com</email>
            <organization>Centre for International Health, University of Bergen</organization>
            <organizationUrl>http://www.uib.no/cih/en</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
    </developers>

    <contributors>
        <contributor>
            <name>Simon Kelly</name>
            <email>simon@cell-life.org</email>
            <organization>Cell Life, Cape Town, South Africa</organization>
            <organizationUrl>http://celllife.org</organizationUrl>
            <roles>
                <role>contributor</role>
            </roles>
        </contributor>
    </contributors>

    <modules>
        <module>model</module>
        <module>server</module>
        <module>rpc-interface</module>
        <module>webapp</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.6</java.version>
        <junit.version>4.4</junit.version>
        <spring.version>2.5.2</spring.version>
        <gwt.version>2.2.0</gwt.version>
        <gwt-maven.version>2.2.0</gwt-maven.version>
        <log4j.version>1.2.16</log4j.version>
        <slf4j.version>1.6.1</slf4j.version>
        <cobertura.maxmem>512M</cobertura.maxmem>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.openxdata</groupId>
                <artifactId>model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openxdata</groupId>
                <artifactId>server</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openxdata</groupId>
                <artifactId>rpc-interface</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openxdata</groupId>
                <artifactId>model</artifactId>
                <classifier>sources</classifier>
                <version>${project.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.openxdata</groupId>
                <artifactId>server</artifactId>
                <classifier>sources</classifier>
                <version>${project.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.openxdata</groupId>
                <artifactId>rpc-interface</artifactId>
                <classifier>sources</classifier>
                <version>${project.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>commons-logging</groupId>
                <artifactId>commons-logging</artifactId>
                <version>1.1.1</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>jcl-over-slf4j</artifactId>
                <version>${slf4j.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-log4j12</artifactId>
                <version>${slf4j.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>log4j</groupId>
                <artifactId>log4j</artifactId>
                <version>${log4j.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>commons-collections</groupId>
                <artifactId>commons-collections</artifactId>
                <version>3.2.1</version>
            </dependency>
            <dependency>
                <groupId>javax.activation</groupId>
                <artifactId>activation</artifactId>
                <version>1.1</version>
            </dependency>
            <dependency>
                <groupId>org.objenesis</groupId>
                <artifactId>objenesis</artifactId>
                <version>1.2</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-webmvc</artifactId>
                <version>${spring.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.gwt</groupId>
                <artifactId>gwt-servlet</artifactId>
                <version>${gwt.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>com.google.gwt</groupId>
                <artifactId>gwt-user</artifactId>
                <version>${gwt.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-beans</artifactId>
                <version>${spring.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context-support</artifactId>
                <version>${spring.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-core</artifactId>
                <version>${spring.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-web</artifactId>
                <version>${spring.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-core-tiger</artifactId>
                <version>2.0.5.RELEASE</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-core</artifactId>
                <version>2.0.5.RELEASE</version>
                <exclusions>
                    <exclusion>
                        <artifactId>spring-core</artifactId>
                        <groupId>org.springframework</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>spring-context</artifactId>
                        <groupId>org.springframework</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>spring-support</artifactId>
                        <groupId>org.springframework</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>spring-aop</artifactId>
                        <groupId>org.springframework</groupId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>servlet-api</artifactId>
                <version>2.5</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>5.1.12</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-test</artifactId>
                <version>${spring.version}</version>
                <scope>test</scope>
            </dependency>
			<dependency>
				<groupId>org.codehaus.groovy</groupId>
				<artifactId>groovy-all</artifactId>
				<version>1.8.3</version>
			</dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>openxdata</id>
            <url>http://nexus.openxdata.org/content/groups/public</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>2.3.2</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <showDeprecation>true</showDeprecation>
                        <showWarnings>true</showWarnings>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.1</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>gwt-maven-plugin</artifactId>
                    <version>${gwt-maven.version}</version>
                    <executions>
                        <execution>
                            <id>gwt-compile</id>
                            <goals>
                                <goal>generateAsync</goal>
                                <goal>compile</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.5</version>
                    <configuration>
                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>cobertura-maven-plugin</artifactId>
                    <version>2.4</version>
                    <configuration>
                        <formats>
                            <format>html</format>
                            <format>xml</format>
                        </formats>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>findbugs-maven-plugin</artifactId>
                    <version>2.3.1</version>
                    <configuration>
                        <findbugsXmlOutput>true</findbugsXmlOutput>
                        <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
                        <xmlOutput>true</xmlOutput>
                    </configuration>
                </plugin>
				<plugin>
					<groupId>org.codehaus.gmaven</groupId>
					<artifactId>gmaven-plugin</artifactId>
					<version>1.2</version>
					<configuration>
						<providerSelection>1.7</providerSelection>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>compile</goal>
								<goal>testCompile</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
        </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>!true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <scm>
        <connection>scm:git:https://github.com/mortalisk/openxdata-oc</connection>
	<developerConnection>scm:git:https://github.com/mortalisk/openxdata-oc</developerConnection>
	<url>https://github.com/mortalisk/openxdata-oc</url>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>openxdata-snapshots</id>
            <url>https://nexus.openxdata.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>openxdata-releases</id>
            <url>https://nexus.openxdata.org/content/repositories/releases</url>
        </repository>
    </distributionManagement>

</project>
